# edit

./: CMakeLists.txt  README.md  build.sh  meson.build
include/: buffer.h  command.h  exec.h  io.h  main.h  misc.h  parser.h
src/: buffer.c  command.c  exec.c  io.c  main.c  misc.c  parser.c
